Animate the pads

--- a/style.css
+++ b/style.css
@@ -96,3 +96,11 @@ select {
     margin-left: 1rem;
 }
 
+@keyframes playTrack{
+    from{
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.2);
+    }
+}
