--- a/style.css
+++ b/style.css
@@ -1,86 +1,91 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
+  }
+  
+  body {
     font-family: sans-serif;
-}
-
-i, svg {
+  }
+  i,
+  svg {
     pointer-events: none;
-}
-
-.kick-pad, .snare-pad, .hihat-pad {
+  }
+  
+  .kick-pad,
+  .snare-pad,
+  .hihat-pad {
     width: 5rem;
     height: 5rem;
     margin: 1rem 0.5rem;
     cursor: pointer;
-}
-
-.kick-pad{
-    background: rgb(210, 118, 118);
-}
-.snare-pad{
-    background: rgb(123, 211, 148);
-}
-.hihat-pad{
-    background: rgb(139, 122, 208);
-}
-.kick-pad.active {
-    background: rgb(213, 45, 45);
-}
-.snare-pad.active{
-    background: rgb(35, 218, 86);
-}
-.hihat-pad.active{
-    background: rgb(75, 40, 216);
-}
-
-.sequencer {
+  }
+  .kick-pad {
+    background: rgb(160, 211, 224);
+  }
+  .snare-pad {
+    background: rgb(224, 160, 208);
+  }
+  .hihat-pad {
+    background: rgb(224, 194, 160);
+  }
+  .kick-pad.active {
+    background: rgb(59, 197, 231);
+  }
+  .snare-pad.active {
+    background: rgb(218, 58, 178);
+  }
+  .hihat-pad.active {
+    background: rgb(241, 158, 64);
+  }
+  
+  .sequencer {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.hihat-track, .snare-track, .kick-track {
+  }
+  
+  .hihat-track,
+  .snare-track,
+  .kick-track {
     display: flex;
     align-items: center;
     width: 70%;
     justify-content: space-between;
     margin-top: 5rem;
-}
-
-.kick, .snare, .hihat {
+  }
+  .kick,
+  .snare,
+  .hihat {
     display: flex;
-}
-
-.controls{
+  }
+  .controls {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex: 1;
     margin: 0rem 2rem;
-}
-
-.controls button {
+  }
+  .controls button {
     padding: 1rem;
+    border-radius: 50%;
     border: none;
     background: rgb(88, 88, 88);
     color: white;
     font-size: 1rem;
     cursor: pointer;
     transition: all 0.5s ease;
-}
-
-.pad {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  
+  .pad {
     transition: all 0.5s ease;
-}
-
-.play {
+  }
+  
+  .play {
     padding: 1rem 2rem;
     font-size: 1.5rem;
     background: rgb(88, 88, 88);
@@ -88,43 +93,42 @@ i, svg {
     border: none;
     cursor: pointer;
     margin-top: 3rem;
-}
-
-select {
+  }
+  
+  select {
     padding: 1rem;
     font-size: 1rem;
-}
-
-.mute.active {
-    background: rgb(165, 221, 182);
-}
-
-.tempo{
+  }
+  
+  .mute.active {
+    background: rgb(182, 182, 182);
+  }
+  
+  .tempo {
     margin: 3rem;
     width: 30%;
-}
-
-.tempo-slider{
+  }
+  .tempo-slider {
     padding: 0.2rem;
+    -webkit-appearance: none;
     margin: 1rem 0rem;
     width: 100%;
     position: relative;
-    background:rgb(88, 88, 88);
+    background: rgb(88, 88, 88);
     cursor: pointer;
     border-radius: 1rem;
-}
-
-.tempo p{
+  }
+  .tempo p {
     font-size: 1.5rem;
     margin: 2rem;
     text-align: center;
-}
-
-@keyframes playTrack{
-    from{
-        transform: scale(1);
+  }
+  
+  @keyframes playTrack {
+    from {
+      transform: scale(1);
     }
     to {
-        transform: scale(1.2);
+      transform: scale(1.2);
     }
-}
+  }
